@@ -1,0 +1,12 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope">
+
+  <include package="zope.component" file="meta.zcml"/>
+  <include package="zope.security" file="meta.zcml"/>
+
+  <include package="zope.component"/>
+  <include package="zope.security"/>
+
+  <include package="zope.container"/>
+  <include package="zope.site"/>
+</configure>
