@@ -13,14 +13,18 @@
 ##############################################################################
 """Reusable functionality for testing site-related code
 """
+import os.path
+import zope.app.testing.functional
 import zope.component
+import zope.container.interfaces
 import zope.site.hooks
+import zope.site.site
 from zope.app.testing.placelesssetup import setUp as placelessSetUp
 from zope.app.testing.placelesssetup import tearDown as placelessTearDown
 from zope.component.interfaces import IComponentLookup
 from zope.interface import Interface
 from zope.location.interfaces import ISite
-from zope.site import LocalSiteManager, SiteManagerAdapter
+from zope.site import LocalSiteManager, SiteManagerAdapter, SiteManagerContainer
 from zope.site.folder import rootFolder
 from zope.site.hooks import setSite
 
@@ -59,3 +63,13 @@ def siteTearDown():
     placelessTearDown()
     zope.site.hooks.resetHooks()
     zope.site.hooks.setSite()
+
+
+layer = zope.app.testing.functional.ZCMLLayer(
+    os.path.join(os.path.dirname(__file__), 'ftesting.zcml'),
+    __name__, 'layer')
+
+
+class FunctionalTestCase(zope.app.testing.functional.FunctionalTestCase):
+
+    layer = layer
