@@ -5,7 +5,8 @@ CHANGES
 3.6.3 (unreleased)
 ------------------
 
-- ...
+- Propagate an ObjectRemovedEvent to the SiteManager upon removal of a
+  SiteManagerContainer.
 
 3.6.2 (2009-07-24)
 ------------------
